# cuda-nvrtc-cdp

./: CMakeLists.txt  README.md  mandelbrot-dyn.cpp  mandelbrot-dyn.cu  mandelbrot.cpp  mandelbrot.cu  pinnedmem.cpp  qsort-dyn.cpp  saxpy.cpp
